--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pair game</title>
-  <script defer src="./pair-app.js"></script>
-  <script defer src="./createGame.js"></script>
-  <script defer src="./newCard.js"></script>
-  <script defer src="./shuffle.js"></script>
-  <script defer src="./confetti.js"></script>
-  <script defer src="./finish.js"></script>
+  <title>Memory game</title>
+  <script defer src="js/pair-app.js"></script>
+  <script defer src="js/createGame.js"></script>
+  <script defer src="js/newCard.js"></script>
+  <script defer src="js/shuffle.js"></script>
+  <script defer src="js/confetti.js"></script>
+  <script defer src="js/finish.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
